# WebGPU-Renderer

./: App.cpp  App.h  App.hpp  CMakeLists.txt  Gpu.cpp  Gpu.hpp  Helpers.hpp  MainWindow.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  main.cpp  shaders.wgsl
assets/models/: asteroid.mtl  monkey.mtl
lib/: CMakeLists.txt
models/: krzesło.mtl  obszar_prism.mtl
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Gpu.cpp  Gpu.hpp  Helpers.hpp  MainWindow.cpp  MainWindow.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  main.cpp  shaders.wgsl
